fixed missing background section 7

--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ main{
     #section-7{
         font-size: large !important;
         border: solid;
-        height: fit-content;
+        height: 50vh;
     }
 
     #section-7 > div{
